# EPITECH-Zappy

./: Makefile  README.md
ai/: Ai.py  Level.py  MyClient.py  Utilities.py  main.py
gui/: CMakeLists.txt  Makefile
gui/src/: exception.hpp  main.cpp
gui/src/GUI/: Gui.cpp  Gui.hpp
gui/src/SFML/: Display.cpp  Display.hpp  IEntity.hpp  ResourceManager.cpp  ResourceManager.hpp  SBroadcast.cpp  SBroadcast.hpp  SEgg.cpp  SEgg.hpp  SGem.cpp  SGem.hpp  SInventory.cpp  SInventory.hpp  SSide_menu.cpp  SSide_menu.hpp  SSlider.cpp  SSlider.hpp  STile.cpp  STile.hpp  STrantorian.cpp  STrantorian.hpp
gui/src/cache/: Egg.cpp  Egg.hpp  Map.cpp  Map.hpp  Stock.cpp  Stock.hpp  Teams.cpp  Teams.hpp  Tile.cpp  Tile.hpp  Trantorians.cpp  Trantorians.hpp
gui/src/menu/: Button.cpp  Button.hpp  IObject.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Menu.cpp  Menu.hpp  MenuState.hpp  Sprite.hpp
gui/src/parser/: Parsing.cpp  Parsing.hpp
gui/src/socket/: Socket.cpp  Socket.hpp
server/: .gitignore  CMakeLists.txt  Makefile
server/include/: server.h
server/src/: ai_commands.c  ai_commands_2.c  ai_commands_3.c  args.c  arrlen.c  broadcast.c  check_incantation.c  check_resources.c  debug.c  eggs.c  eject.c  fork.c  game_gui_events.c  generate_client.c  gui_commands.c  gui_commands_2.c  gui_commands_3.c  gui_event_fork.c  gui_events.c  handle_client_socket.c  handle_received_data.c  incantation.c  listen_cases.c  look_command.c  look_command_misc.c  main.c  map.c  map_change.c  map_misc.c  misc.c  object.c  orientation_to_number.c  player.c  player_gui_commands.c  player_gui_events.c  put_resources.c  random_spawn.c  remove_player.c  server.c  server_commands.c  (+7 more)
(+1 files in other folders)
